--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -6,6 +6,7 @@
     margin: 0;
 }
 
+
 /*define website background*/
 
 body {
@@ -26,12 +27,16 @@ body {
 
 /*set font for headers */
 h1 {
+    margin-bottom: 0px;
     font-family: PTsans;
     font-size: 20px;
     color: white;
+    font-weight: 800;
 }
 
 h2 {
+    margin-bottom: 0px;
+    font-weight: 800;
     font-family: PTsans;
     font-size: 48px;
     color: white;
@@ -58,14 +63,28 @@ display: none;
 }
 
 .navbar__container {
+    width: 100%;
+    z-index: 1;
+    position: fixed;
     display: flex;
     height: 60px;
-    background-color: #231f20;
+    background-color: #242425;
     align-items: center;
     justify-content: center;
+    box-shadow: 1px 1px 6px #000;
+}
+
+
+.navbar__elements ul {
+padding: 0px;
+}
+
+.navbar__elements ul {
+    margin-bottom: 0px;
 }
 
 .navbar__elements li {
+
     display: inline-block;
     padding-left: 50px;
 }
@@ -73,20 +92,34 @@ display: none;
 
 /* Nav bar elements setup */
 .navbar__elements a{
+    font-family: Anuphan;
     vertical-align: middle;
     color: rgb(255, 255, 255);
     font-size: 20px;
     line-height: 20px;
     text-decoration: none;
     align-items: center;
+    transition:  ease 0.2s;
  
 }
 
 .navbar__elements a:hover{
+    transition: ease 0.2s;
    font-size: 22px;
-    color: #618afb;
+    color: #006aff;
     text-decoration: none;
+    
 }
+
+
+.navbar__elements a.current{
+    transition: ease 0.2s;
+   font-size: 22px;
+    color: #bd0091;
+    text-decoration: none;
+    
+}
+
 }
 
 
@@ -125,6 +158,7 @@ display: none;
 }
 
 .hero__container .hero__logo-container {
+    
 margin: auto;
 
 }
@@ -140,12 +174,18 @@ margin: auto;
     text-align: left;
 }
 
-/* Set the side container next to the main container*/
+/*setup a gradient for our side image */
 
-.hero__container-sideImage {
-    object-fit: fill;
-    max-width: 100%;
+.hero__container-sideImage-container{
+   background-repeat: no-repeat;
+   background-size: cover;
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 20%,rgba(0, 0, 0, 0.7) 100%), url('../Src/Images/Dummy\ image.png');
+    width: 50%;
+    z-index: -1;
 }
+
+
+
 
 /* made a class for centering text, I guess I can reuse this later*/
 .centered__container_text {
@@ -163,6 +203,7 @@ margin: auto;
 /* skill section */
 
 .leftAligned__section h2 {
+ 
     margin-top: 50px;
     margin-left: 60px;
     font-size: 48px;
@@ -252,8 +293,10 @@ margin: auto;
 
 .projects__grid img:hover {
     transform: scale(1.2);
-    box-shadow: 0px 0px 20px 0px rgba(5,117,158,1);
- 
+   
+    box-shadow: 0px 0px 20px 0px #365582;
+
+    
 }
 .projects__grid p {
     margin: 30px 0 50px;
@@ -297,6 +340,7 @@ margin: auto;
 
 .about__grid {
     display: flex;
+    gap: 100px;
     justify-content: center;
 
 }
@@ -330,7 +374,7 @@ margin: auto;
     grid-row: repeat(5, 1fr);
     gap: 100px;
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .blog__grid-element {
@@ -341,28 +385,75 @@ margin: auto;
     margin-right: 300px;
 }
 
-.blog__grid-element-container img  {
-   size: 10;
-
+.blog__grid-element-image-container img  {
+    object-fit: cover;
 }
 
 /*text below the image (date)*/
 .blog__grid-element-image-container p {
     margin-top: 30px;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
 }
 
 .blog__grid-element-description button{
     font-size: 15px;
+    border-style: outset;
     border-color: #618afb;
     color: white;
     background-color: #232323;
     border-radius: 15px;
     margin-top: 20px;
     height: 50px;
-    width: 200px;
+    width: 150px;
+    transition: ease 0.2s;
 }
+
+.blog__grid-element-description h2 {
+    font-size: 32px;
+    margin-bottom: 15px;
+}
+/* button effects */
+
+.blog__grid-element-description button:hover{
+    width: 200px;
+    opacity: 1;
+    transition: ease 0.2s;
+
+}
+
+.blog__grid-element-description button::after{
+
+opacity: 0;
+transition: ease 0.2s;
+
+}
+
+.blog__grid-element-description button:hover::after{
+    content: "→";
+    opacity: 1;
+}
+
+.btn-group{
+    margin: auto;
+}
+
+.btn-primary {
+    border-width: 0px;
+    background-color: #365582;
+    margin: 20px;
+    margin-bottom: 100px;
+}
+
+.slim__divider {
+    margin: auto;
+    border-radius: 50px;
+    height: 1px;
+    width: 80%;
+    background-color: #006aff;
+}
+
+
 
 /* contact page CSS */
 
@@ -425,6 +516,7 @@ margin: auto;
     height: 35px;
     margin-top: 30px;
     margin-left: 50px;
+    border-color: #618afb;
 }
 
 .contact__form-div textarea{
@@ -434,6 +526,7 @@ margin: auto;
     margin-top: 30px;
     margin-left: 50px;
     margin-bottom: 30px;
+    border-color: #618afb;
 }
 
 
