--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -111,15 +111,6 @@ padding: 0px;
     
 }
 
-
-.navbar__elements a.current{
-    transition: ease 0.2s;
-   font-size: 22px;
-    color: #bd0091;
-    text-decoration: none;
-    
-}
-
 }
 
 
@@ -152,6 +143,7 @@ padding: 0px;
 /* main div attributes*/
 
 .hero__container {
+    position: relative;
     display:flex;
     justify-content: space-between;
     height: 500px;
@@ -164,13 +156,28 @@ margin: auto;
 }
 
 /* Main title size and position*/
-.hero__container .hero__logo-container img {
-    height: 200px;
+
+.hero__container .hero__logo-container a {
+display: flex;
+justify-content: center;
 }
+ 
+ 
+.hero__container .hero__logo-container img {
+
+   height: 200px;
+}
+ 
+.hero__container .hero__logo-container span{
+    
+ color: #71aaff;
+    
+}
+
 .hero__container h1 {
     font-weight: bold;
     color: white;
-    font-size: 26px;
+    font-size: 36px;
     text-align: left;
 }
 
@@ -184,22 +191,57 @@ margin: auto;
     z-index: -1;
 }
 
+/* the following CSS defines the hero attributes for the other pages */
+.hero__container-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+}
+
+.hero__container-title h1 {
+    font-size: 60px;
+    text-align: center;
+}
+
 
 
 
 /* made a class for centering text, I guess I can reuse this later*/
-.centered__container_text {
+.centered__container-text {
     
     margin: 50px 20% 50px 20%;
     text-align: center;
 
 }
 
-.centered__container_text h2{
+.centered__container-text h2{
     
     padding-bottom: 50px;
 
 }
+
+.centered__container-text button {
+    font-size: 15px;
+    border-style: outset;
+    border-color: #618afb;
+    color: white;
+    background-color: #232323;
+    border-radius: 15px;
+    margin-top: 20px;
+    height: 50px;
+    width: 150px;
+    transition: ease 0.2s;
+}
+
+.centered__container-text button:hover{
+    width: 200px;
+    height: 60px;
+    opacity: 1;
+    transition: ease 0.2s;
+
+}
+
 /* skill section */
 
 .leftAligned__section h2 {
@@ -255,19 +297,6 @@ margin: auto;
 
 /* projects page CSS */
 
-.hero__container-title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 500px;
-}
-
-.hero__container-title h1 {
-    font-size: 60px;
-    text-align: center;
-}
-
-
 .projects__grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -293,11 +322,10 @@ margin: auto;
 
 .projects__grid img:hover {
     transform: scale(1.2);
-   
     box-shadow: 0px 0px 20px 0px #365582;
-
-    
 }
+
+
 .projects__grid p {
     margin: 30px 0 50px;
     text-align: center;
@@ -307,6 +335,12 @@ margin: auto;
     align-items: center;
     justify-content: center;
     word-break: break-all;
+}
+
+/* center the project grid item if it is alone*/
+
+.projects__grid :nth-last-child(1):nth-child(odd) {
+	grid-column: 2 / span 2;
 }
 
 /* about me page CSS */
@@ -419,7 +453,6 @@ margin: auto;
     width: 200px;
     opacity: 1;
     transition: ease 0.2s;
-
 }
 
 .blog__grid-element-description button::after{
