added responsive design using both bootstrap and media queries

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,6 +1,6 @@
 /*css reset*/
 
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -44,7 +44,7 @@ h2 {
 /* set font for paragraphs */
 p {
     font-family: Anuphan;
-    font-size: 25px;
+    font-size: 22px;
     color: white;
 }
 
@@ -55,66 +55,66 @@ p {
 }
 
 @media (min-width : 700px) {
-/* define navbar align and background for desktop*/
+    /* define navbar align and background for desktop*/
 
-.navbar__mobile-container {
-display: none;
+    .navbar__mobile-container {
+        display: none;
+    }
+
+    .navbar__container {
+        width: 100%;
+        z-index: 1;
+        position: fixed;
+        display: flex;
+        height: 60px;
+        background-color: #242425;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 1px 1px 6px #000;
+    }
+
+    .navbar__elements ul {
+        padding: 0px;
+    }
+
+    .navbar__elements ul {
+        margin-bottom: 0px;
+    }
+
+    .navbar__elements li {
+
+        display: inline-block;
+        padding-left: 50px;
+    }
+
+
+    /* Nav bar elements setup */
+    .navbar__elements a {
+        font-family: Anuphan;
+        vertical-align: middle;
+        color: rgb(255, 255, 255);
+        font-size: 20px;
+        line-height: 20px;
+        text-decoration: none;
+        align-items: center;
+        transition: ease 0.2s;
+
+    }
+
+    .navbar__elements a:hover {
+        transition: ease 0.2s;
+        font-size: 22px;
+        color: #006aff;
+        text-decoration: none;
+
+    }
+
 }
 
-.navbar__container {
-    width: 100%;
-    z-index: 1;
-    position: fixed;
-    display: flex;
-    height: 60px;
-    background-color: #242425;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 1px 1px 6px #000;
-}
 
-.navbar__elements ul {
-padding: 0px;
-}
-
-.navbar__elements ul {
-    margin-bottom: 0px;
-}
-
-.navbar__elements li {
-
-    display: inline-block;
-    padding-left: 50px;
-}
-
-
-/* Nav bar elements setup */
-.navbar__elements a{
-    font-family: Anuphan;
-    vertical-align: middle;
-    color: rgb(255, 255, 255);
-    font-size: 20px;
-    line-height: 20px;
-    text-decoration: none;
-    align-items: center;
-    transition:  ease 0.2s;
- 
-}
-
-.navbar__elements a:hover{
-    transition: ease 0.2s;
-   font-size: 22px;
-    color: #006aff;
-    text-decoration: none;
-    
-}
-
-}
-
-
-   /* define navbar align and background for mobile*/
+/* define navbar align and background for mobile*/
 @media (max-width : 700px) {
- 
+
     .navbar__container {
         display: none;
     }
@@ -122,54 +122,80 @@ padding: 0px;
     .navbar__mobile-container {
         display: flex;
         justify-content: flex-end;
-        background-color: #231f20;
+        background-color: #242425;
+        box-shadow: 1px 1px 6px #000;
         height: 60px;
         align-items: center;
-    
+
     }
-    
-    .navbar__mobile-burgerMenu{
+
+    .navbar__mobile-burgerMenu {
         margin-right: 20px;
         height: 30px;
         width: 30px;
     }
-    
+
+}
+
+
+
+/* hero attributes*/
+
+/* mobile hero view */
+@media (max-width : 1200px) {
+    .hero__container {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
     }
 
-   
+    .hero__container-sideImage-container {
+      display: none;
+    }
 
-/* main div attributes*/
+}
+@media (min-width : 1200px) {
+    .hero__container {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        height: 500px;
+    }
 
-.hero__container {
-    position: relative;
-    display:flex;
-    justify-content: space-between;
-    height: 500px;
+    .hero__container-sideImage-container {
+        background-repeat: no-repeat;
+        background-size: cover;
+        /*background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 20%,rgba(0, 0, 0, 0.7) 100%), url('../Src/Images/Dummy\ image.png');*/
+        width: 50%;
+        z-index: -1;
+    }
 }
 
 .hero__container .hero__logo-container {
-    
-margin: auto;
+
+    margin: auto;
 
 }
 
 /* Main title size and position*/
 
 .hero__container .hero__logo-container a {
-display: flex;
-justify-content: center;
+    display: flex;
+    justify-content: center;
 }
- 
- 
+
+
 .hero__container .hero__logo-container img {
 
-   height: 200px;
+    height: 200px;
 }
- 
-.hero__container .hero__logo-container span{
-    
- color: #71aaff;
-    
+
+.hero__container .hero__logo-container span {
+
+    color: #71aaff;
+
 }
 
 .hero__container h1 {
@@ -181,12 +207,10 @@ justify-content: center;
 
 /*setup a gradient for our side image */
 
-.hero__container-sideImage-container{
-   background-repeat: no-repeat;
-   background-size: cover;
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 20%,rgba(0, 0, 0, 0.7) 100%), url('../Src/Images/Dummy\ image.png');
-    width: 50%;
-    z-index: -1;
+/*carousel settings */
+
+.carousel-inner img {
+    object-fit: cover;
 }
 
 /* the following CSS defines the hero attributes for the other pages */
@@ -206,15 +230,15 @@ justify-content: center;
 
 
 /* made a class for centering text, I guess I can reuse this later*/
-.centered__container-text {
-    
+.centered__container-text{
+
     margin: 50px 20% 50px 20%;
     text-align: center;
 
 }
 
-.centered__container-text h2{
-    
+.centered__container-text h2 {
+
     padding-bottom: 50px;
 
 }
@@ -232,7 +256,7 @@ justify-content: center;
     transition: ease 0.2s;
 }
 
-.centered__container-text button:hover{
+.centered__container-text button:hover {
     width: 200px;
     height: 60px;
     opacity: 1;
@@ -242,32 +266,77 @@ justify-content: center;
 
 /* skill section */
 
-.leftAligned__section h2 {
- 
-    margin-top: 50px;
-    margin-left: 60px;
-    font-size: 48px;
+/* reusable centerable text*/
+@media (min-width : 1200px) {
+
+    .leftAligned__text h2 {
+
+        margin-top: 50px;
+        margin-left: 60px;
+        font-size: 48px;
+    }
 
 }
 
-/* grid of brand icons */
+/* mobile */
+@media (max-width : 1200px) {
 
-.app__icons-grid {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin: auto;
-    width: 800px;
+    .leftAligned__text {
+        justify-content: center;
+        display: flex;
+    }
+
+    .leftAligned__text h2 {
+
+        margin-top: 50px;
+
+        font-size: 48px;
+    }
+
+}
+
+/* mobile app grid */
+@media (max-width : 1200px) {
+    .app__icons-grid {
+        display: grid;
+        gap: 1px;
+        grid-template-columns: repeat(2, 200px);
+        justify-content: center;
+        justify-items: center;
+    }
+
+
+    .app__icons-grid img {
+        display: flex;
+        object-fit: contain;
+        width: 110px;
+        height: 110px;
+    }
+
 }
 
 
-.app__icons-grid img {
-    object-fit: contain;
-    width: 250px;
-    height: 150px;
+/* desktop app grid */
+
+@media (min-width : 1200px) {
+    .app__icons-grid {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin: auto;
+        width: 800px;
+    }
+
+
+    .app__icons-grid img {
+        object-fit: contain;
+        width: 250px;
+        height: 150px;
+    }
 }
+
 
 /* footer  */
 
@@ -295,18 +364,35 @@ justify-content: center;
 
 /* projects page CSS */
 
-.projects__grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-    gap: 50px;
-    max-width: 40%;
-    margin: 0 auto;
+/* mobile grid */
+
+@media (max-width : 1200px) {
+    .projects__grid {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
+/* desktop grid */
+@media (min-width : 1200px) {
+    .projects__grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+        column-gap: 50px;
+        max-width: 40%;
+        margin: 0 auto;
+    }
+
+    /* center the project grid item if it is alone*/
+    .projects__grid :nth-last-child(1):nth-child(odd) {
+        grid-column: 2 / span 2;
+    }
+
+}
 
 .projects__grid img {
 
@@ -328,17 +414,11 @@ justify-content: center;
     margin: 30px 0 50px;
     text-align: center;
     width: 250px;
-    height: 80px; 
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
     word-break: break-all;
-}
-
-/* center the project grid item if it is alone*/
-
-.projects__grid :nth-last-child(1):nth-child(odd) {
-	grid-column: 2 / span 2;
 }
 
 /* about me page CSS */
@@ -347,57 +427,129 @@ justify-content: center;
     margin-bottom: -50px;
 }
 
-.profile__div {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    height: 500px;
+/* desktop profile description */
+@media (min-width : 1200px) {
+
+   /* .profile__container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        height: 500px;
+    }
+
+    .profile__container-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .profile__container img {
+        margin-top: 50px;
+        object-fit: contain;
+        justify-self: center;
+        border-radius: 30%;
+        width: 400px;
+        height: 400px;
+    }*/
+
+    /*scale info paragraph according to display size */
+
+
 }
 
-
-.profile__div img {
-    margin-right: 300px;
-    object-fit: contain;
-    justify-self: center;
-    border-radius: 30%;
-	width: 400px;
-	height: 400px;
-}
-
-.profile__description-div p {
-    margin-right: 100px;
-    margin-bottom: 30px;
-    width: 900px;
-}
-
-.about__grid {
-    display: flex;
-    gap: 100px;
-    justify-content: center;
-
-}
-
-.about__grid ul {
+#info__paragraph p {
+    margin: -40px 5% 100px 5%;
     text-align: center;
 }
-.about__grid li{
- 
-    display: inline-block;
-    padding: 0px 100px 0px 0px;
+
+/* mobile profile description*/
+
+@media (max-width : 1200px) {
+
+    /*.profile__container {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        align-items: center;
+        height: auto;
+    }
+
+    .profile__container-image {
+        display: flex;
+        justify-content: center;
+    }
+
+    .profile__container img {
+        margin-top: 50px;
+        object-fit: contain;
+        justify-self: center;
+        border-radius: 30%;
+        width: 300px;
+        height: 300px;
+    }
+
+    .profile__description-div {
+        text-align: center;
+        margin-right: 5%;
+        margin-left: 5%;
+        margin-bottom: 30px;
+    }
+
+    .profile__description-div p {
+        font-size: 17px;
+    }
+
+    #info__paragraph p {
+        font-size: 17px;
+        margin: -40px 5% 100px 5%;
+        text-align: center;
+    }*/
 }
 
-.about__grid img {
-    object-fit: contain;
-    border-radius: 30%;
-    width: 400px;
-    height: 400px;
-    transition: 0.2s;
+
+.about__grid {
+    margin-top: 50px;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
 }
 
-#info__paragraph {
-   margin: -40px 20% 100px 20%;
-   text-align: center;
+
+/* desktop about  grid*/
+@media (min-width : 1200px) {
+
+    .about__grid img {
+        object-fit: contain;
+        border-radius: 30%;
+        width: 400px;
+        height: 400px;
+        transition: 0.2s;
+        margin-bottom: 50px;
+    }
+    
 }
+
+/* mobile about  grid*/
+@media (max-width : 1200px) {
+
+    .about__grid {
+        gap: 30px;
+
+        align-items: center;
+        margin-bottom: 50px;
+    }
+    
+    .about__grid img {
+        object-fit: contain;
+        border-radius: 30%;
+        width: 140px;
+        height: 140px;
+        transition: 0.2s;
+      
+    }
+    
+}
+
+
 
 /* blog page CSS*/
 
@@ -417,7 +569,7 @@ justify-content: center;
     margin-right: 300px;
 }
 
-.blog__grid-element-image-container img  {
+.blog__grid-element-image-container img {
     object-fit: cover;
 }
 
@@ -428,7 +580,7 @@ justify-content: center;
     text-align: center;
 }
 
-.blog__grid-element-description button{
+.blog__grid-element-description button {
     font-size: 15px;
     border-style: outset;
     border-color: #618afb;
@@ -445,27 +597,28 @@ justify-content: center;
     font-size: 32px;
     margin-bottom: 15px;
 }
+
 /* button effects */
 
-.blog__grid-element-description button:hover{
+.blog__grid-element-description button:hover {
     width: 200px;
     opacity: 1;
     transition: ease 0.2s;
 }
 
-.blog__grid-element-description button::after{
+.blog__grid-element-description button::after {
 
-opacity: 0;
-transition: ease 0.2s;
+    opacity: 0;
+    transition: ease 0.2s;
 
 }
 
-.blog__grid-element-description button:hover::after{
+.blog__grid-element-description button:hover::after {
     content: "→";
     opacity: 1;
 }
 
-.btn-group{
+.btn-group {
     margin: auto;
 }
 
@@ -488,26 +641,28 @@ transition: ease 0.2s;
 
 /* contact page CSS */
 
+/*mobile contact form*/
 
 @media (max-width: 1024px) {
 
-.contact__form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap:  10px;
-    align-content: center;
- }
+    .contact__form-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        align-content: center;
+    }
 }
 
+/*desktop contact form*/
 @media (min-width: 1024px) {
     .contact__form-container {
         display: flex;
         justify-content: center;
-        gap:  500px;
+        gap: 500px;
         align-content: center;
-     }
-     
+    }
+
 }
 
 .contact__form-container h2 {
@@ -537,11 +692,11 @@ transition: ease 0.2s;
 }
 
 
-.contact__form-div h2{
+.contact__form-div h2 {
     font-size: 30px;
 }
 
-.contact__form-div input{
+.contact__form-div input {
     display: block;
     width: 80%;
     height: 35px;
@@ -550,7 +705,7 @@ transition: ease 0.2s;
     border-color: #618afb;
 }
 
-.contact__form-div textarea{
+.contact__form-div textarea {
     display: block;
     width: 80%;
     height: 70px;
@@ -563,12 +718,12 @@ transition: ease 0.2s;
 
 .contact__form-logo {
     position: relative;
- 
+
 }
 
 .contact__form-logo img {
 
     object-fit: contain;
-	width: 400px;
-	height: 400px;
+    width: 400px;
+    height: 400px;
 }
