--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -384,6 +384,7 @@ p {
         flex-direction: column;
         align-items: center;
         gap: 50px;
+        margin-top: 50px;
         margin-bottom: 50px;
     }
 
@@ -419,7 +420,7 @@ p {
         grid-template-columns: repeat(4, 2fr);
         justify-content: center;
         max-width: 40%;
-        margin: 0 auto 50px;
+        margin: 50px auto;
         gap: 50px;
     }
 
