--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -48,97 +48,79 @@ p {
     color: white;
 }
 
+/*setup resonsive font size for mobile*/
+
+@media (max-width : 720px) {
+
+    h1 {
+        font-size: 20px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    p {
+        font-size: 17px;
+    }
+}
+
 /* Universal divider for all content separation */
 .divider {
     height: 50px;
     background-color: #444444;
 }
 
-@media (min-width : 700px) {
-    /* define navbar align and background for desktop*/
+/* bootstrap navbar settings */
 
-    .navbar__mobile-container {
-        display: none;
-    }
-
-    .navbar__container {
-        width: 100%;
-        z-index: 1;
-        position: fixed;
-        display: flex;
-        height: 60px;
-        background-color: #242425;
-        align-items: center;
-        justify-content: center;
-        box-shadow: 1px 1px 6px #000;
-    }
-
-    .navbar__elements ul {
-        padding: 0px;
-    }
-
-    .navbar__elements ul {
-        margin-bottom: 0px;
-    }
-
-    .navbar__elements li {
-
-        display: inline-block;
-        padding-left: 50px;
-    }
-
-
-    /* Nav bar elements setup */
-    .navbar__elements a {
-        font-family: Anuphan;
-        vertical-align: middle;
-        color: rgb(255, 255, 255);
-        font-size: 20px;
-        line-height: 20px;
-        text-decoration: none;
-        align-items: center;
-        transition: ease 0.2s;
-
-    }
-
-    .navbar__elements a:hover {
-        transition: ease 0.2s;
-        font-size: 22px;
-        color: #006aff;
-        text-decoration: none;
-
-    }
-
+.navbar {
+    min-height: 60px;
+    background-color: #242425;
+    box-shadow: 1px 1px 6px #000;
 }
 
-/* define navbar align and background for mobile*/
-@media (max-width : 700px) {
+/* styles for navbar when collapsed */
 
-    .navbar__container {
-        display: none;
-    }
-
-    .navbar__mobile-container {
-        position: fixed;
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-        background-color: #242425;
-        box-shadow: 1px 1px 6px #000;
-        height: 60px;
-        align-items: center;
-        z-index: 1;
-    }
-
-    .navbar__mobile-burgerMenu {
-        margin-right: 20px;
-        height: 30px;
-        width: 30px;
-    }
-
+.navbar-collapse.show {
+    transition: 0.2s;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
+/* center the collapsed navbar and make it fit full screen*/
+.navbar-collapse.show .navbar-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+    height: 100vh;
+}
 
+/*set the size of the text when the navbar is collapsed */
+.navbar-collapse.show .navbar-nav a {
+    margin-top: 30px;
+    font-size: 25px;
+}
+
+.navbar-nav .nav-link.active {
+    text-decoration: underline;
+    text-decoration-color: #006aff;
+}
+
+.nav-link {
+    font-family: Anuphan;
+    font-size: 20px;
+    transition: 0.2s;
+    line-height: 20px;
+}
+
+.nav-link:hover {
+    color: #006aff;
+    transition: 0.2s;
+    font-size: 22px;
+}
 
 /* hero attributes*/
 
@@ -158,6 +140,7 @@ p {
 
 }
 
+/* desktop hero view */
 @media (min-width : 1200px) {
     .hero__container {
         position: relative;
@@ -176,9 +159,7 @@ p {
 }
 
 .hero__container .hero__logo-container {
-
     margin: auto;
-
 }
 
 /* Main title size and position*/
@@ -207,8 +188,6 @@ p {
     text-align: left;
 }
 
-/*setup a gradient for our side image */
-
 /*carousel settings */
 
 .carousel-inner img {
@@ -235,9 +214,6 @@ p {
     font-size: 60px;
     text-align: center;
 }
-
-
-
 
 /* made a class for centering text, I guess I can reuse this later*/
 .centered__container-text {
@@ -535,7 +511,6 @@ p {
 @media (min-width : 1200px) {
     .blog__grid {
         display: grid;
-        grid-row: repeat(5, 1fr);
         gap: 100px;
         margin-top: 100px;
         margin-bottom: 50px;
@@ -555,7 +530,6 @@ p {
 @media (max-width : 1200px) {
     .blog__grid {
         display: grid;
-        grid-column: repeat(1, 1fr);
         gap: 100px;
         margin-top: 100px;
         margin-bottom: 50px;
@@ -599,9 +573,26 @@ p {
     transition: ease 0.2s;
 }
 
-.blog__grid-element-description h2 {
-    font-size: 32px;
-    margin-bottom: 15px;
+/*set paragraph size for mobile blog title*/
+
+@media (max-width : 720px) {
+
+    .blog__grid-element-description h2 {
+        font-size: 25px;
+        margin-bottom: 15px;
+    }
+}
+
+
+/*set paragraph size for desktop blog title*/
+
+@media (min-width : 1200px) {
+
+    .blog__grid-element-description h2 {
+        font-size: 32px;
+        margin-bottom: 15px;
+    }
+
 }
 
 /* button effects */
