fixed text margin on desktop

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -215,7 +215,7 @@ p {
 
     .centered__container-text {
 
-        margin: 50px 30px 50px 30px;
+        margin: 50px 20% 50px 20%;
         text-align: center;
     }
 
