--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -60,7 +60,7 @@ p {
 .divider {
     height: 50px;
     background-color: #444444;
-}    
+}
 
 .navbar {
     min-height: 60px;
@@ -205,10 +205,12 @@ p {
     text-align: center;
 }
 
-/* made a class for centering text, I guess I can reuse this later*/
 
 
 /* desktop hero view */
+
+
+/* made a class for centering text, I guess I can reuse this later*/
 @media (min-width : 1200px) {
 
     .centered__container-text {
@@ -222,6 +224,7 @@ p {
         padding-bottom: 50px;
     }
 }
+
 /* mobile */
 @media (max-width : 1200px) {
     .centered__container-text {
@@ -336,28 +339,36 @@ p {
 /* footer  */
 
 .footer {
+    box-shadow: 0px 0px 3px 0px #000000;
     display: flex;
     justify-content: center;
-    height: 300px;
-    background-color: #444444;
-}
-
-
-.footer h2 {
-    margin-top: 50px;
-    justify-content: center;
-    font-size: 60px;
-    text-align: center;
+    min-height: 200px;
+    background-color: #242425;
 }
 
 #footer__edge {
+    margin-top: 60px;
     position: absolute;
     display: flex;
-    width: 20%;
-    height: 2px;
-    background-color: white;
+    width: 50%;
+    height: 1px;
+    background-color: #006aff;
 }
 
+#footer__author {
+    font-size: 12px;
+}
+
+#footer__logo {
+    align-self: center;
+    height: 25px;
+    transition: 0.2s;
+}
+
+#footer__logo:hover {
+    transition: 0.2s;
+    transform: scale(1.2);
+}
 
 /* projects page CSS */
 
@@ -464,7 +475,7 @@ p {
 @media (max-width : 720px) {
 
     #profile__header {
-      display: none;
+        display: none;
     }
 }
 
@@ -523,7 +534,7 @@ p {
 @media (max-width : 720px) {
 
     #entries__title {
-      display: none;
+        display: none;
     }
 }
 
@@ -663,7 +674,7 @@ p {
 
 @media (max-width: 1200px) {
 
-    .contact__form-logo{
+    .contact__form-logo {
         display: none;
     }
 
@@ -675,7 +686,7 @@ p {
         gap: 10px;
         align-content: center;
     }
-    
+
     .contact__form-div .contact__form-background {
         box-shadow: 0px 0px 5px 0px #365582;
         border-radius: 3px;
@@ -684,7 +695,7 @@ p {
         width: 90vw;
         margin-bottom: 50px;
     }
-    
+
 }
 
 /*desktop contact form*/
