--- a/sass/views/_projects.scss
+++ b/sass/views/_projects.scss
@@ -41,16 +41,19 @@
     .projects__grid {
         position: relative;
         display: grid;
-        grid-template-columns: repeat(4, 2fr);
+        grid-template-columns: repeat(4, 1fr);
         justify-content: center;
+        align-items: center;
         max-width: 40%;
         margin: 50px auto;
         gap: 50px;
 
+        &-image-container {
+
         img {
             object-fit: cover;
             border-radius: 5%;
-            width: 400px;
+            width: min( 21vw, 400px);
             height: 250px;
             transition: 0.2s;
         }
@@ -70,6 +73,7 @@
             transition: ease 0.2s;
         }
     }
+}
 
     /* center the project grid item if it is alone*/
      :nth-last-child(1):nth-child(odd) {
@@ -80,23 +84,21 @@
 
 /* set out position to relative in order to center the text using absolute position*/
 .projects__grid-image-container {
+  
     position: relative;
+    justify-self: center;
 
-}
-
-.projects__grid {
-
-    img:hover {
-        transform: scale(1.2);
-        box-shadow: 0px 0px 20px 0px #365582;
-        
-/* sets the opacitiy of the p tag to 1 so it becomes visible*/
-
-        +p {
+        img:hover {
+          transform: scale(1.2);
+          box-shadow: 0px 0px 20px 0px #365582;
+      
+          // sets the opacity of the p tag to 1 so it becomes visible
+          + p {
             background-color: rgba(12, 12, 12, 0.805);
             transition: ease 0.2s;
-            opacity: 1; 
+            opacity: 1;
+          }
         }
     }
-  
-}
+
+
