replaced naming conventions to lowercase

--- a/sass/utils/_defaults.scss
+++ b/sass/utils/_defaults.scss
@@ -16,12 +16,12 @@ body {
 
 @font-face {
     font-family: PTsans;
-    src: url(../Src/Fonts/PTSans-Regular.ttf);
+    src: url(../Src/fonts/PTSans-Regular.ttf);
 }
 
 @font-face {
     font-family: Anuphan;
-    src: url(../Src/Fonts/Anuphan.ttf);
+    src: url(../Src/fonts/Anuphan.ttf);
 }
 
 /*set font for headers */
