--- a/sass/views/_index.scss
+++ b/sass/views/_index.scss
@@ -29,7 +29,7 @@
     .hero__container-sideImage-container {
         background-repeat: no-repeat;
         background-size: cover;
-        /*background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 20%,rgba(0, 0, 0, 0.7) 100%), url('../Src/Images/Dummy\ image.png');*/
+        /*background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 20%,rgba(0, 0, 0, 0.7) 100%), url('../src/Images/Dummy\ image.png');*/
         width: 50%;
         z-index: -1;
     }
