--- a/Styles/main.css
+++ b/Styles/main.css
@@ -13,11 +13,11 @@ body {
 
 @font-face {
   font-family: PTsans;
-  src: url(../Src/Fonts/PTSans-Regular.ttf);
+  src: url(../Src/fonts/PTSans-Regular.ttf);
 }
 @font-face {
   font-family: Anuphan;
-  src: url(../Src/Fonts/Anuphan.ttf);
+  src: url(../Src/fonts/Anuphan.ttf);
 }
 /*set font for headers */
 h1 {
@@ -260,7 +260,7 @@ p {
   .hero__container-sideImage-container {
     background-repeat: no-repeat;
     background-size: cover;
-    /*background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 20%,rgba(0, 0, 0, 0.7) 100%), url('../Src/Images/Dummy\ image.png');*/
+    /*background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 20%,rgba(0, 0, 0, 0.7) 100%), url('../src/Images/Dummy\ image.png');*/
     width: 50%;
     z-index: -1;
   }
