--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,8 @@
 
 //import site defauls (css reset and bg color)
 @import "./utils/defaults";
+//import mixins (animations)
+@import "./utils/mixins";
 
 //components
 
