--- a/sass/views/_blog.scss
+++ b/sass/views/_blog.scss
@@ -12,6 +12,7 @@
 /* desktop blog grid*/
 @media (min-width : 1200px) {
     .blog__grid {
+        @include fadeInAnimation(1s, 0.3s);
         display: flex;
         flex-direction: column;
         gap: 100px;
@@ -58,12 +59,9 @@
         text-align: center;
 
         span {
-            color: #618afb;
+            color: $secondaryColor;
         }
     }
-
-   
-
 }
 
 /*set paragraph size for mobile blog title*/
@@ -92,9 +90,9 @@
     button {
         font-size: 15px;
         border-style: outset;
-        border-color: #618afb;
+        border-color: $btnHoverColor;
         color: white;
-        background-color: #232323;
+        background-color: $btnNormalColor;
         border-radius: 15px;
         margin-top: 20px;
         height: 50px;
@@ -102,14 +100,12 @@
         transition: ease 0.2s;
 
         &:hover {
-            background-color: #006aff;
+            background-color: $btnHoverColor;
             width: 200px;
-            opacity: 1;
             transition: ease 0.2s;
 
             &::after {
                 content: "→";
-                opacity: 1;
             }
         }
     }
