--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,7 @@
 /* footer  */
 
 .footer {
+    @include fadeInAnimation(1s, 0s);
     box-shadow: 0px 0px 3px 0px #000000;
     display: flex;
     justify-content: center;
