--- a/sass/components/_leftAligned-text.scss
+++ b/sass/components/_leftAligned-text.scss
@@ -4,7 +4,7 @@
 @media (min-width : 1200px) {
 
     .leftAligned__text h2 {
-
+        @include fadeInAnimation(3s, 0s);
         margin-top: 50px;
         margin-left: 60px;
         font-size: 48px;
@@ -16,6 +16,7 @@
 @media (max-width : 1200px) {
 
     .leftAligned__text {
+        @include fadeInAnimation(3s, 0s);
         justify-content: center;
         display: flex;
     }
