--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -1,4 +1,5 @@
 .navbar {
+    @include fadeInAnimation(0.5s, 0s);
     min-height: 60px;
     background-color: #242425;
     box-shadow: 1px 1px 6px #000;
