--- a/sass/utils/_defaults.scss
+++ b/sass/utils/_defaults.scss
@@ -1,3 +1,22 @@
+//define color variables
+
+$titleColor : white;
+$subtitleColor : white;
+$paragraphColor : white;
+
+$dividerColor : #444444;
+
+//secondary color for general purpose
+
+$primaryColor : #232323;
+$secondaryColor : #006aff;
+$boxShadowColor : #365582;
+//button colors
+
+$btnNormalColor : #232323;
+$btnHoverColor : #006aff;
+
+
 /* reset css default properties*/
 
 * {
@@ -30,7 +49,7 @@ h1 {
     margin-bottom: 0px;
     font-family: PTsans;
     font-size: 20px;
-    color: white;
+    color: $titleColor;
     font-weight: 800;
 }
 
@@ -39,7 +58,7 @@ h2 {
     font-weight: 800;
     font-family: PTsans;
     font-size: 48px;
-    color: white;
+    color: $subtitleColor;
 }
 
 /* set font for paragraphs */
@@ -47,7 +66,7 @@ h2 {
 p {
     font-family: Anuphan;
     font-size: 22px;
-    color: white;
+    color: $paragraphColor;
 }
 
 /*setup responsive font size for mobile*/
@@ -67,7 +86,7 @@ p {
 .btn-primary {
 
     border-width: 0px;
-    background-color: #365582;
+    background-color: $secondaryColor;
     margin: 20px;
     margin-bottom: 100px;
 }
@@ -79,6 +98,6 @@ p {
     border-radius: 50px;
     height: 1px;
     width: 80%;
-    background-color: #006aff;
+    background-color: $secondaryColor;
 }
 
