--- a/sass/views/_about-me.scss
+++ b/sass/views/_about-me.scss
@@ -17,6 +17,7 @@
 }
 
 .about__grid {
+    @include fadeInAnimation(1s, 0s);
     margin-top: 50px;
     display: flex;
     gap: 30px;
@@ -28,6 +29,7 @@
 @media (min-width : 1200px) {
 
     .about__grid {
+        @include fadeInAnimation(1s, 0s);
         img {
             object-fit: contain;
             border-radius: 30%;
