--- a/sass/views/_index.scss
+++ b/sass/views/_index.scss
@@ -3,6 +3,7 @@
 /* mobile hero view */
 @media (max-width : 1200px) {
     .hero__container {
+        @include fadeInAnimation(1s, 0s);
         position: relative;
         display: flex;
         margin-top: 60px;
@@ -20,6 +21,7 @@
 /* desktop hero view */
 @media (min-width : 1200px) {
     .hero__container {
+        @include fadeInAnimation(1s, 0s);
         position: relative;
         display: flex;
         justify-content: space-between;
@@ -51,13 +53,12 @@
         }
 
         span {
-            color: #71aaff;
+            color: $secondaryColor;
         }
     }
 
     h1 {
         font-weight: bold;
-        color: white;
         font-size: 36px;
         text-align: left;
     }
@@ -76,6 +77,7 @@
 
 @media (max-width : 1200px) {
     .app__icons-grid {
+        @include fadeInAnimation(1s, 0s);
         display: grid;
         gap: 1px;
         padding: 10x;
@@ -97,6 +99,7 @@
 
 @media (min-width : 1200px) {
     .app__icons-grid {
+        @include fadeInAnimation(1s, 0s);
         display: flex;
         justify-content: center;
         align-items: center;
