--- a/styles/main.css
+++ b/styles/main.css
@@ -56,7 +56,7 @@ p {
 
 .btn-primary {
   border-width: 0px;
-  background-color: #365582;
+  background-color: #006aff;
   margin: 20px;
   margin-bottom: 100px;
 }
@@ -71,10 +71,24 @@ p {
 }
 
 .navbar {
+  opacity: 0;
+  animation: fadeIn 0.5s forwards;
+  animation-delay: 0s;
   min-height: 60px;
   background-color: #242425;
   box-shadow: 1px 1px 6px #000;
   /* styles for navbar when collapsed */
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .navbar-collapse.show {
   transition: 0.2s;
@@ -115,10 +129,24 @@ p {
 
 /* the following CSS defines the hero attributes for the other pages */
 .hero__container-image {
+  opacity: 0;
+  animation: fadeIn 0.6s forwards;
+  animation-delay: 0s;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 500px;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .hero__container-image img {
   height: 100%;
@@ -133,15 +161,43 @@ p {
 
 /* Universal divider for all content separation */
 .divider {
+  opacity: 0;
+  animation: fadeIn 0.3s forwards;
+  animation-delay: 0s;
   height: 50px;
   background-color: #444444;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 /* class for centering text */
 @media (min-width: 1200px) {
   .centered__container-text {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0.5s;
     margin: 50px 20% 50px 20%;
     text-align: center;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .centered__container-text h2 {
     padding-bottom: 50px;
@@ -150,8 +206,22 @@ p {
 /* mobile */
 @media (max-width: 1200px) {
   .centered__container-text {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0.5s;
     margin: 20px 30px;
     text-align: center;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .centered__container-text h2 {
     padding-top: 10px;
@@ -164,7 +234,7 @@ p {
 .centered__container-text button {
   font-size: 15px;
   border-style: outset;
-  border-color: #618afb;
+  border-color: #006aff;
   color: white;
   background-color: #232323;
   border-radius: 15px;
@@ -184,16 +254,44 @@ p {
 /* desktop left aligned text container */
 @media (min-width: 1200px) {
   .leftAligned__text h2 {
+    opacity: 0;
+    animation: fadeIn 3s forwards;
+    animation-delay: 0s;
     margin-top: 50px;
     margin-left: 60px;
     font-size: 48px;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 }
 /* mobile left aligned text container */
 @media (max-width: 1200px) {
   .leftAligned__text {
+    opacity: 0;
+    animation: fadeIn 3s forwards;
+    animation-delay: 0s;
     justify-content: center;
     display: flex;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .leftAligned__text h2 {
     margin-top: 30px;
@@ -203,11 +301,25 @@ p {
 }
 /* footer  */
 .footer {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+  animation-delay: 0s;
   box-shadow: 0px 0px 3px 0px #000000;
   display: flex;
   justify-content: center;
   min-height: 200px;
   background-color: #242425;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 #footer__edge {
@@ -238,12 +350,26 @@ p {
 /* mobile hero view */
 @media (max-width: 1200px) {
   .hero__container {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0s;
     position: relative;
     display: flex;
     margin-top: 60px;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .hero__container-sideImage-container {
     display: none;
@@ -252,10 +378,24 @@ p {
 /* desktop hero view */
 @media (min-width: 1200px) {
   .hero__container {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0s;
     position: relative;
     display: flex;
     justify-content: space-between;
     height: 500px;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .hero__container-sideImage-container {
     background-repeat: no-repeat;
@@ -277,11 +417,10 @@ p {
   height: 200px;
 }
 .hero__container-logo span {
-  color: #71aaff;
+  color: #006aff;
 }
 .hero__container h1 {
   font-weight: bold;
-  color: white;
   font-size: 36px;
   text-align: left;
 }
@@ -294,12 +433,26 @@ p {
 /* mobile app grid */
 @media (max-width: 1200px) {
   .app__icons-grid {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0s;
     display: grid;
     gap: 1px;
     padding: 10x;
     grid-template-columns: repeat(2, 160px);
     justify-content: center;
     justify-items: center;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .app__icons-grid img {
     display: flex;
@@ -311,6 +464,9 @@ p {
 /* desktop app grid */
 @media (min-width: 1200px) {
   .app__icons-grid {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0s;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -318,6 +474,17 @@ p {
     gap: 20px;
     margin: auto;
     width: 800px;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .app__icons-grid img {
     object-fit: contain;
@@ -329,12 +496,26 @@ p {
 /* mobile grid */
 @media (max-width: 1200px) {
   .projects__grid {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0.3s;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 50px;
     margin-top: 50px;
     margin-bottom: 50px;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .projects__grid img {
     object-fit: cover;
@@ -361,6 +542,9 @@ p {
 /* desktop grid */
 @media (min-width: 1200px) {
   .projects__grid {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0.3s;
     position: relative;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -369,6 +553,17 @@ p {
     max-width: 40%;
     margin: 50px auto;
     gap: 50px;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .projects__grid-image-container img {
     object-fit: cover;
@@ -425,14 +620,44 @@ p {
 }
 
 .about__grid {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+  animation-delay: 0s;
   margin-top: 50px;
   display: flex;
   gap: 30px;
   justify-content: center;
 }
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 /* desktop about  grid*/
 @media (min-width: 1200px) {
+  .about__grid {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0s;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
   .about__grid img {
     object-fit: contain;
     border-radius: 30%;
@@ -466,11 +691,25 @@ p {
 /* desktop blog grid*/
 @media (min-width: 1200px) {
   .blog__grid {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0.3s;
     display: flex;
     flex-direction: column;
     gap: 100px;
     margin-top: 100px;
     margin-bottom: 50px;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .blog__grid-element {
     display: grid;
@@ -507,7 +746,7 @@ p {
   text-align: center;
 }
 .blog__grid-element-image-container p span {
-  color: #618afb;
+  color: #006aff;
 }
 
 /*set paragraph size for mobile blog title*/
@@ -528,7 +767,7 @@ p {
 .blog__grid-element-description button {
   font-size: 15px;
   border-style: outset;
-  border-color: #618afb;
+  border-color: #006aff;
   color: white;
   background-color: #232323;
   border-radius: 15px;
@@ -540,12 +779,10 @@ p {
 .blog__grid-element-description button:hover {
   background-color: #006aff;
   width: 200px;
-  opacity: 1;
   transition: ease 0.2s;
 }
 .blog__grid-element-description button:hover::after {
   content: "→";
-  opacity: 1;
 }
 
 /* contact page CSS */
@@ -595,9 +832,23 @@ p {
 
 /* the tab on right side for contact details*/
 .contact__form-div {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+  animation-delay: 0.3s;
   border-radius: 3px;
   justify-content: center;
   align-items: center;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .contact__form-div h2 {
   font-size: 30px;
@@ -632,8 +883,22 @@ p {
 }
 
 .contact__form-logo {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+  animation-delay: 0.3s;
   position: relative;
   justify-self: center;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .contact__form-logo img {
   object-fit: contain;
